--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ h1,h2,h3{
     font-family: 'DM Serif Display', serif;
     font-weight: 400;
 }
+p{
+    line-height: 1.6;
+}
 .boxmenu{
     display: none;
 }
@@ -80,7 +83,7 @@ header img{
 }
 .showcase > div:first-child h1{
     color: #FFF;
-    font-size: 56px;
+    font-size: 58px;
     font-weight: 400;
     line-height: 1;
     margin-bottom: 40px;
@@ -127,7 +130,7 @@ main > div:nth-child(2){
 }
 main > h1{
     padding: 350px 150px 50px 150px;
-    font-size: 46px;
+    font-size: 50px;
 }
 .features{
     display: flex;
@@ -141,6 +144,9 @@ main > h1{
 .col p{
 
     color:#777;
+}
+.col h3{
+    font-size: 1.8em;
 }
 .col img,h3,p{
     padding-bottom: 20px;;
