--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ header img{
     color: hsl(0, 0%, 98%);
     font-size: 16px;
     margin-bottom: 40px;
+    line-height: 1.6;
 }
 
 .showcase > div:first-child a{
@@ -144,6 +145,7 @@ main > h1{
 .col p{
 
     color:#777;
+    line-height: 1.6;
 }
 .col h3{
     font-size: 1.8em;
